# rss_filters

./: LICENSE  README.md  aggregate.pl  bay12forum.pl  bay12forum_reader.sh  jvc.pl  mangahere.pl  mangainn.pl  mangareader.pl  parse.pl  rss_filters.cabal  shell.nix  title.pl  userfriendly.pl
haskell/: README.md  rss_filters.cabal
haskell/src/: Filters.hs  Main.hs  RSS.hs  Scrappers.hs
haskell/src/Filters/: Rename.hs
haskell/src/Scrappers/: Mangahere.hs  Mangainn.hs  Mangareader.hs  Util.hs
src/: Main.hs  RSS.hs
src/Filters/: Util.hs
src/Scrappers/: Mangahere.hs  Mangareader.hs  Util.hs
