
name:                rss-filters
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

executable rss_filter
  main-is:             Main.hs
  other-modules:       RSS, Scrappers
  hs-source-dirs:      src/
  build-depends:       base >= 4.9 && < 4.10
                     , array, containers, transformers, directory
                     , hxt
  ghc-options:         -Wall
  default-language:    Haskell2010

